<resources>
    <string name="app_name">NEEI_IPT</string>
    <string name="open_menu">Abrir Menu de Navegação</string>
    <string name="close_menu">Fechar Menu de Navegação</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textoNEII">Bem-vindos ao Núcleo de Engenharia Informática do Instituto Politécnico de Tomar! Somos uma comunidade dedicada à paixão pela tecnologia, inovação e colaboração.\n\nApós um período de breve inatividade, estamos empolgados em anunciar a nossa reabertura. Este núcleo tem como missão proporcionar um ambiente onde estudantes, ex-alunos e entusiastas de Engenharia Informática possam reunir-se, partilhar conhecimentos e participar em projetos e iniciativas do núcleo.\n\nEstamos comprometidos em oferecer oportunidades de aprendizagem prática, incentivar a criatividade e promover a excelência académica. Junta-te a nós enquanto exploramos as vastas possibilidades da Engenharia Informática e construímos uma comunidade forte e inclusiva. Estamos ansiosos para embarcar nesta jornada de descoberta e crescimento juntos!</string>
    <string name="githubJoao">https://github.com/joaomrrg</string>
    <string name="githubGoncalo">https://github.com/gfmcosta</string>
    <string name="githubMiguel">https://github.com/aluno22116</string>
    <string name="githubTiago">https://github.com/TyyyCardoso</string>
    <string name="githubFilipe">https://github.com/firipi</string>
    <string name="githubBarbosa">https://github.com/PabloHatesTacos</string>
    <string name="githubGuilherme">https://github.com/gfmcosta</string>
    <string name="githubLibrary">https://github.com/SundeepK/CompactCalendarView</string>
    <string name="linkedInJoao">https://www.linkedin.com/in/joão-gonçalves-3653b7257</string>
    <string name="linkedInGoncalo">https://www.linkedin.com/in/-goncalocosta-/</string>
    <string name="linkedInTiago">https://www.linkedin.com/in/tiago-cardoso-a079aa264/</string>
    <string name="instagramMiguel">https://www.instagram.com/sebastiao_09?igsh=MWFpbHE0MGZsbHVrYg==</string>
    <string name="instagramFilipe">https://www.instagram.com/_felps02?igsh=Y291aXRoNDdxeWZu</string>
    <string name="instagramBarbosa">https://www.instagram.com/gonzalo_barbozza?igsh=MXBtNDlqbG4zc3Bwag==</string>
    <string name="instagramGuilherme">https://www.instagram.com/guilherme_aires10?igsh=MXR2azF1NG1tdDRjbg==</string>
    <string name="llLibrary2">https://github.com/bumptech/glide</string>
    <string name="llLibrary3">https://github.com/square/retrofit</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="onde_estamos">Onde Estamos?</string>
    <string name="localizacao">Instituto Politécnico de Tomar\nBloco I - Sala ?</string>
    <string name="desenvolvedores">Desenvolvedores</string>
    <string name="goncalo_costa">Gonçalo Costa</string>
    <string name="joao_goncalves">João Gonçalves</string>
    <string name="adicionar_evento">Adicionar Evento</string>
    <string name="grupo">Grupo</string>
    <string name="lista_de_apontamentos">Lista de Apontamentos</string>
    <string name="eventos">Eventos</string>
    <string name="neei">NEEI</string>
    <string name="password">Password</string>
    <string name="repetir_password">Repetir Password</string>
    <string name="novo_documento">Novo Documento</string>
    <string name="lista_de_documentos">Lista de Documentos</string>
    <string name="nucleo_de_estudantes_de_engenharia">Núcleo de Estudantes de Engenharia</string>
    <string name="informatica">Informática</string>
    <string name="guest_neei_home_guest">guest@neei:/home/guest$</string>
    <string name="try_me">try me</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="numero_de_aluno">Número de aluno</string>
    <string name="genero">Género</string>
    <string name="editar">Editar</string>
    <string name="confirmar_alteracoes">Confirmar Alterações</string>
    <string name="recup_pass">Introduz o email associado à conta que queres recuperar</string>
    <string name="recuperar">Recuperar</string>
    <string name="registar">Registar</string>
    <string name="nova_transaco">Nova Transação</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="data_formato_dd_mm_yyyy">Data (formato dd/MM/yyyy)</string>
    <string name="tipo_de_movimento">Tipo de Movimento:</string>
    <string name="gasto">Gasto</string>
    <string name="ganho">Ganho</string>
    <string name="adicionar">Adicionar</string>
    <string name="saldo_neei">Saldo NEEI</string>
    <string name="euro">€</string>
    <string name="adicionar_movimentos">Adicionar Movimentos</string>
    <string name="definicoes">Definições</string>
    <string name="modo_escuro">Modo Escuro</string>
    <string name="licenciatura_engenharia_informatica">Licenciatura Engenharia Informática</string>
    <string name="desenvolvimento_de_aplicacoes_moveis">Desenvolvimento de Aplicações Móveis</string>
    <string name="_2023_2024">2023/2024</string>
    <string name="_23692">23692</string>
    <string name="_23882">23882</string>
    <string name="bibliotecas_adicionais_usadas">Bibliotecas Adicionais Usadas</string>
    <string name="compactcalendarview">CompactCalendarView</string>
    <string name="sundeepk">SundeepK</string>
    <string name="compact_justificacao">Biblioteca usada para permitir a vista de eventos (pontos) dentro do calendário</string>
    <string name="utilizadores">Utilizadores</string>
    <string name="username_jmrrg">Username: jmrrg</string>
    <string name="password_123">Password: 123</string>
    <string name="administrador">Administrador</string>
    <string name="aluno">Aluno</string>
    <string name="username_costa">Username: costa</string>
    <string name="lista_de_utilizadores">Lista de Utilizadores</string>
    <string name="titulo_do_documento">Título do Documento</string>
    <string name="unidade_curricular">Unidade Curricular</string>
    <string name="autor">Autor</string>
    <string name="_01_01_2023">01/01/2023</string>
    <string name="titulo_do_evento">Título do Evento</string>
    <string name="descricao_do_evento">Descrição do Evento</string>
    <string name="horas">12:00H</string>
    <string name="descricao_do_documento">Descrição do Documento</string>
    <string name="descrico_da_transa_o">Descrição da Transação</string>
    <string name="_50">50€</string>
    <string name="nome_do_utilizador">Nome do Utilizador</string>
    <string name="role">Role</string>
    <string name="user">User</string>
    <string name="direcao">Direção</string>
    <string name="presidente">Presidente</string>
    <string name="miguel_pereira">Miguel Pereira</string>
    <string name="vice_presidente">Vice-Presidente</string>
    <string name="tesoureiro">Tesoureiro</string>
    <string name="tiago_cardoso">Tiago Cardoso</string>
    <string name="secretario">Secretário</string>
    <string name="goncalo_barbosa">Gonçalo Barbosa</string>
    <string name="vogal">Vogal</string>
    <string name="filipe_simoes">Filipe Simões</string>
    <string name="suplente">Suplente</string>
    <string name="guilherme_aires">Guilherme Aires</string>
    <string name="assembleia_geral">Assembleia Geral</string>
    <string name="conselho_fiscal">Conselho Fiscal</string>
    <string name="alterar_password">Alterar Password</string>
    <string name="documento">Documento</string>
    <string name="login">Entrar</string>
    <string name="recuperar_password">Recuperar Password</string>
    <string name="glide">Glide</string>
    <string name="bumptech">bumptech</string>
    <string name="glide_justificacao">Biblioteca usada para dar fetch a imagens online</string>
    <string name="retrofit">Retrofit</string>
    <string name="quare">quare</string>
    <string name="retrofit_justificacao">Biblioteca usada para funcionalidades da API</string>
    <string name="download">Download</string>
</resources>