<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/backgroundnight">

        <!-- User Fields -->
        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_about" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <!-- Person Fields -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nome"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/apelido"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <EditText
            android:id="@+id/editTextBirthDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/data_de_nascimento"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <EditText
            android:id="@+id/editTextLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/linkedin"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <EditText
            android:id="@+id/editTextGithub"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/github"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <EditText
            android:id="@+id/editTextNumAluno"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/numero_de_aluno"
            android:enabled="false"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:textColorHint="#ff888888"/>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/genero"
            android:enabled="false"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/editar"
                android:backgroundTint="@color/blue"/>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/confirmar_alteracoes"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
