<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.activity.SplashActivity">

    <ImageView
        android:id="@+id/cores"
        android:layout_width="422dp"
        android:layout_height="157dp"
        android:src="@drawable/cores"></ImageView>

    <EditText
        android:id="@+id/nomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="@string/nome"
        android:paddingLeft="20dp"></EditText>

    <EditText
        android:id="@+id/apelidoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="@string/apelido"
        android:paddingLeft="20dp"></EditText>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="@string/email"
        android:paddingLeft="20dp"></EditText>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="@string/username"
        android:paddingLeft="20dp"></EditText>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"></EditText>

    <EditText
        android:id="@+id/repetePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="@string/repetir_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"></EditText>


    <Button
        android:id="@+id/registarBtn"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:backgroundTint="#11568C"
        android:text="@string/registar"></Button>





</LinearLayout>