<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    style="@style/ITEM"
    android:layout_marginBottom="20dp">


    <!-- Descrição da Transação -->
    <TextView
        android:id="@+id/transactionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descrico_da_transa_o"
        android:textStyle="bold"
        android:textSize="18sp"
        style="@style/TEXT"/>

    <!-- Data da Transação -->
    <TextView
        android:id="@+id/transactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_01_01_2023"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        style="@style/TEXT"/>

    <!-- Data da Transação -->
    <TextView
        android:id="@+id/transactionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        style="@style/TEXT"/>



</LinearLayout>
