<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.activity.SplashActivity">

    <ImageView
        android:id="@+id/cores"
        android:layout_width="422dp"
        android:layout_height="157dp"
        android:src="@drawable/cores"></ImageView>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
    </TextView>

    <EditText
        android:id="@+id/pwdEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"></EditText>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetir_password"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
    </TextView>

    <EditText
        android:id="@+id/pwdREdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"></EditText>

    <Button
        android:id="@+id/alterarBtn"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:backgroundTint="#11568C"
        android:text="@string/alterar_password"></Button>





</LinearLayout>