<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.activity.SplashActivity">

    <ImageView
        android:id="@+id/cores"
        android:layout_width="422dp"
        android:layout_height="157dp"
        android:src="@drawable/cores"></ImageView>

    <ImageView
        android:id="@+id/logo_final"
        android:layout_width="422dp"
        android:layout_height="300dp"
        android:src="@drawable/logo_final"></ImageView>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="Utilizador"
        android:paddingLeft="20dp"></EditText>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"></EditText>

    <TextView
        android:id="@+id/recuperar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_password"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-20dp"
        ></TextView>

    <Button
        android:id="@+id/button_login"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#19568C"
        android:text="@string/login"></Button>

    <TextView
        android:id="@+id/registar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registar"
        android:layout_gravity="center"
        android:textStyle="bold"
        ></TextView>




</LinearLayout>